--- a/wp-content/themes/understrap-child/sass/theme/partials/functions/responsive_text_functions.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/functions/responsive_text_functions.scss
@@ -4,11 +4,11 @@
 
 // These values are the minimum and maximum viewport sizes to apply the font scaling
 $min_width:                 300;
-$max_width:                 3000;
+$max_width:                 40000;
 // These values represent the range of font-size to apply
 // These values effect the base font-size, headings and other elements will scale proportionally
 $min_font:                 8;
-$max_font:                  30; 
+$max_font:                  40; 
 
 :root { font-size: #{$min_font}px; }
 
@@ -50,7 +50,7 @@ $modularscale: (
     ratio: 1.3,
   ),
   1200px: (
-    base: 1rem,
+    base: .5rem,
     ratio: 1.3,
   ),
 );
